# Mechanical_Analysis

./: .gitignore  Anotações Código Stability Judge SUGIMOTO.txt  Bridge Results.xlsx  Entendimento Pushing.txt  ExperimentoMassa.xlsx  Force Experiment.xlsx  Functionality Tests Results.xlsx  Important Memo From Matlab Files.txt  Measuring Experiments.txt  README.md  presentation 20 june.docx
Block_Files/: mokotamememe.txt  star.txt
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_model_reader/: CMakeLists.txt  README.md  package.xml
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_model_reader/config/: block.yaml  model.yaml
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_model_reader/launch/: block_printer_model_reader.launch
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_model_reader/src/: Block.cpp  BlockColor.cpp  BlockModel.cpp  ComponentBlock.cpp  Point2.cpp  Point3.cpp  block_printer_model_reader_node.cpp
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_model_reader/srv/: GetBlockState.srv  GetComponentBlock.srv
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_motion_commander/: CMakeLists.txt  README.md  package.xml
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_motion_commander/config/: robot.yaml
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_motion_commander/launch/: motion_commander.launch
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_motion_commander/src/: Pose.cpp  block_printer_motion_commander_node.cpp  motion_interpolator.cpp
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_moveit_interface/: CMakeLists.txt  README.md  package.xml
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_moveit_interface/config/: moveit.yaml
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_moveit_interface/launch/: commander.launch
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_moveit_interface/src/: ForceConverter.cpp  MoveitPlanner.cpp  Waypoint.cpp  moveit_robot_movement_interface.cpp
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_pick/: CMakeLists.txt  README.md  package.xml
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_pick/config/: pick_pose.yaml
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_pick/launch/: block_printer_pick.launch
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_pick/src/: Lane.cpp  block_printer_pick_node.cpp
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_pick/srv/: GetPickPose.srv
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_place/: CMakeLists.txt  README.md  package.xml
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_place/config/: place_pose.yaml
Block_Printer_System/Software/linux/block_printer_ws/src/block_printer_visualizer/: CMakeLists.txt  README.md  package.xml
Block_Printer_System/Software/linux/block_printer_ws/src/trajectory_reducer/: CMakeLists.txt  README.md  package.xml
Block_Printer_System/Software/linux/denso_ws/src/denso_bcap/: CMakeLists.txt  README.md  package.xml
Block_Printer_System/Software/linux/denso_ws/src/denso_bcap_controller/: CMakeLists.txt  README.md  package.xml
M Files/: BigScript.m  (+25 more)
ROS2_ws/src/environment_builder/: CMakeLists.txt  package.xml
ROS2_ws/src/environment_builder/launch/: assembly_plan_visualizer.launch.py
ROS2_ws/src/environment_builder/meshes/: 1x1_lanes_base.dae  2x2_lanes_base.dae  3x2_lane_base.dae  4x2_lane_base.dae  8x2_lane_base.dae  8x2_lanes_base_test.dae
ROS2_ws/src/environment_builder/src/: assembly_plan_visualizer.cpp  block_cleaner.cpp  block_services.cpp  dummy_client.cpp  world_builder.cpp  world_builder_simple.cpp
ROS2_ws/src/environment_interface/: CMakeLists.txt  package.xml
ROS2_ws/src/environment_interface/include/environment_interface/: environment_information.h
ROS2_ws/src/environment_interface/msg/: Block.msg
ROS2_ws/src/environment_interface/src/: block_spawner.cpp
ROS2_ws/src/environment_interface/srv/: CreateBlock.srv
ROS2_ws/src/manipulation_task_constructor/: CMakeLists.txt  package.xml
ROS2_ws/src/manipulation_task_constructor/include/manipulation_task_constructor/: manipulation_task_constructor.h
ROS2_ws/src/manipulation_task_constructor/launch/: cobotta_pick_place_demo.launch.py  pick_place_demo.launch.py  vp6242_pick_place_demo.launch.py
ROS2_ws/src/manipulation_task_constructor/src/: manipulation_task_constructor.cpp  new_manipulation_task_constructor.cpp  world_builder.cpp
ROS2_ws/src/mtc_tutorial/: CMakeLists.txt
ROS2_ws/src/mtc_tutorial/launch/: assembly_execution.launch.py  task_client.launch.py  task_server.launch.py
ROS2_ws/src/mtc_tutorial/src/: task_creator_action_client.cpp  task_creator_action_server.cpp  task_creator_action_server_bkup.cpp
ROS2_ws/src/robot_movement_tester/: CMakeLists.txt
ROS2_ws/src/robot_movement_tester/src/: collision_avoid_pose_commander.cpp  joint_states_reproducer.cpp
ROS2_ws/src/ros1_bridge_subscriber/: CMakeLists.txt  package.xml
ROS2_ws/src/ros1_bridge_subscriber/src/: commander.cpp  joint_commands.cpp  subscriber.cpp
ROS2_ws/src/scara_robot_description/: .setup_assistant  CMakeLists.txt  CMakeListsvp.txt  package.xml
ROS2_ws/src/scara_robot_description/config/: .setup_assistant  package.xml
ROS2_ws/src/scara_robot_description/config/config/: initial_positions.yaml  joint_limits.yaml  scara_robot.ros2_control.xacro  scara_robot.srdf  scara_robot.urdf.xacro
ROS2_ws/src/scara_robot_description/config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ROS2_ws/src/scara_robot_description/urdf/: scara_robot.urdf.xacro  scara_robot.xacro  tayo.urdf.xacro
(+850 files in other folders)
