<?xml version="1.0"?>
<package format="2">
  <name>block_printer_visualizer</name>
  <version>0.0.0</version>
  <description>The block_printer_visualizer package</description>
  <maintainer email="kohama@todo.todo">kohama</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>block_printer_model_reader</depend>
  <depend>block_printer_pick</depend>
</package>
